# play-llm

./: pyproject.toml
notebook/: .env
notebook/get_start/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb
notebook/with_prompts/: 00.ipynb  01.ipynb  02.ipynb  response.txt
