[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["ro2co <272157218@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.11.19"
ipykernel = "^6.29.5"
llama-index-core = "^0.11.19"
llama-index-llms-ollama = "^0.3.4"
llama-index-llms-openrouter = "^0.2.1"
llama-index-llms-azure-openai = "^0.2.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
